# graduate-design

./: README.md
langchain-rag-demo/: .env  README.md  embeddings-model.py  main.py  pyproject.toml  temp.py
test-demo/: main.py  pyproject.toml
traffic-recognition/: .cursorrules  README.md  app.py  repomix-output.xml  requirements.txt  traffic_sign_recognition.md  yolo_integration_task.md
traffic-recognition-v2/: .cursorrules  .gitignore
traffic-recognition-v2/.trae/rules/: project_rules.md
traffic-recognition-v2/backend/: requirements.txt
traffic-recognition-v2/backend/app/: main.py
traffic-recognition-v2/backend/docs/: README.md
traffic-recognition-v2/backend/models/: README.md  config.json  download.py  run.py  test_models.py
traffic-recognition-v2/data-resolve/: README.md  extract_weather_data.py  process_tt100k.py  quick_start.sh  requirements.txt  setup.py
traffic-recognition-v2/docs/: README.md  api-reference.md  implementation-plan.md  problem-solve.md  project-structure.md  python-implementation.md  solution-design.md  system-integration-test.md  task-checklist.md  task-plan.md  todo-checklist.md
traffic-recognition-v2/frontend/: README.md  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
traffic-recognition-v2/middleware/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
traffic-recognition-v2/outputs/: dataset.yaml
traffic-recognition/app/: main.py
traffic-recognition/tests/: test_app.py  test_exporters.py  test_metrics.py  test_models.py  test_processors.py
(+125 files in other folders)
