[project]
name = "langchain-rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.20",
    "langchain-text-splitters>=0.3.7",
    "langchain[openai]>=0.3.21",
    "langgraph>=0.3.21",
    "notebook>=7.3.3",
]
