[project]
name = "langchain-rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-openai>=0.3.11",
    "langchain-text-splitters>=0.3.7",
    "langchain[openai]>=0.3.21",
    "langgraph>=0.3.21",
    "notebook>=7.3.3",
    "python-dotenv>=1.0.0",
    "langchain-chroma>=0.1.0",
    "bs4>=0.0.1",
    "langchain-deepseek>=0.1.3",
]
